force-app/main/default/objects/Research_Professional_Settings__c/Research_Professional_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Contains API information to connect with research Professional System.</description>
    <label>Research Professional Settings</label>
</CustomObject>