force-app/main/default/objects/Research_Professional_Settings__c/fields/Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Api_Key__c</fullName>
    <label>Api_Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>