force-app/main/default/objects/Research_Professional_Settings__c/fields/API_Password__c.field-meta.xml
<CustomField>
    <fullName>API_Password__c</fullName>
    <label>API_Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>