force-app/main/default/objects/Research_Professional_Settings__c/fields/Api_Url__c.field-meta.xml
<CustomField>
    <fullName>Api_Url__c</fullName>
    <label>Api_Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>