force-app/main/default/objects/Research_Professional_Settings__c/fields/Batch_Delay__c.field-meta.xml
<CustomField>
    <fullName>Batch_Delay__c</fullName>
    <description>Delay in milli seconds</description>
    <label>Batch Delay</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>