force-app/main/default/objects/Research_Professional_Settings__c/fields/Batch_Delay_Upon_Failure__c.field-meta.xml
<CustomField>
    <fullName>Batch_Delay_Upon_Failure__c</fullName>
    <description>If the callout to Research Professional fails, how long to wait before retrying the batch (NOTE: it will retry the same pagination number, even if the data on Research Professional has changed)</description>
    <label>Batch Delay Upon Failure</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>