force-app/main/default/objects/Research_Professional_Settings__c/fields/Batch_Delay_Upon_Failure_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Batch_Delay_Upon_Failure_Multiplier__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Optionally, you can multiplicatively increase the Batch Delay Upon Failure with every time a specific batch fails. E.g. if 2, the delay would increase from 10 minutes to 20, 40 etc. Alternatively, leave it at 1.</description>
    <inlineHelpText>Optionally, you can multiplicatively increase the Batch Delay Upon Failure with every time a specific batch fails. E.g. if 2, the delay would increase from 10 minutes to 20, 40 etc. Alternatively, leave it at 1.</inlineHelpText>
    <label>Batch Delay Upon Failure Multiplier</label>
    <precision>11</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>