force-app/main/default/objects/Research_Professional_Settings__c/fields/Eligibility_Regions__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Regions__c</fullName>
    <description>This field holds the comma separated regions names to make the criteria for marking Prime Ready to True</description>
    <inlineHelpText>Comma separated regions to make it available for Researchers</inlineHelpText>
    <label>Eligibility Regions</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>