force-app/main/default/objects/Research_Professional_Settings__c/fields/Maximum_Number_of_Batch_Retries__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Number_of_Batch_Retries__c</fullName>
    <defaultValue>0</defaultValue>
    <description>If a callout to Research Professional fails, how many times do we wish to re-attempt the same callout before aborting the load</description>
    <label>Maximum Number of Batch Retries</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>